# vertex

./: .gitignore  Cargo.toml  mesh_builder.rs  puzzle.txt  save_progress.yaml
dev_install/: .vertex_install
dev_install/puzzles/doggo/: puzzle.txt
dev_install/puzzles/empanada/: puzzle.txt
dev_install/puzzles/penny/: puzzle.txt
dev_install/puzzles/rockfact/: puzzle.txt
dev_install/puzzles/rose/: puzzle.txt
dev_install/puzzles/rubik/: puzzle.txt
puzzles/doggo/: autosave.yaml  puzzle.txt
puzzles/empanada/: autosave.yaml  puzzle.txt
puzzles/penny/: autosave.yaml  penny.txt  puzzle.txt
puzzles/potato/: autosave.yaml  puzzle.txt
puzzles/rockfact/: autosave.yaml  puzzle.txt  rock.txt
puzzles/rose/: autosave.yaml  puzzle.txt
puzzles/rubik/: autosave.yaml  puzzle.txt
puzzles/zinnia/: autosave.yaml  puzzle.txt
src/: app.rs  button.rs  color_picker.rs  cursor.rs  drawing.rs  edge.rs  editor_ui.rs  file_open_system.rs  gamestate.rs  grid.rs  leven.rs  lpf.rs  main.rs  math.rs  particles.rs  puzzle.rs  reference_image.rs  slider.rs  take_once.rs  text.rs  triangle.rs  ui_element.rs  updater.rs  vertex.rs  window.rs
src/secret_project/: app.rs  autosolver.rs  button.rs  camera.rs  color_picker.rs  confetti.rs  constants.rs  cursor.rs  drawing.rs  edge.rs  editor_ui.rs  file_open_system.rs  grid.rs  hidden_text.rs  installation.rs  math.rs  mesh_builder.rs  mod.rs  network.rs  particles.rs  puzzle.rs  reference_image.rs  save_data.rs  settings.rs  sounds.rs  states.rs  take_once.rs  text.rs  text_alerts.rs  triangle.rs  ui.rs
src/secret_project/filesystem/: mod.rs  network_manifest.rs  reference_image.rs  save_data.rs  settings.rs
src/secret_project/puzzle/: edge.rs  messages.rs  mod.rs  plugin.rs  puzzle.rs  triangle.rs  vertex.rs
