[package]
name = "vertex"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_dylib = "0.15.0-rc.3"
bevy_vector_shapes = "0.9.3"
delaunator = "1.0.2"
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
