[package]
name = "vertex"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.2", features = ["jpeg"] }
bevy_egui = "0.37.1"
bevy_framepace = { git = "https://github.com/TotalKrill/bevy_framepace", version = "0.20.0" }
bevy_vector_shapes = "0.11.0"
delaunator = "1.0.2"
futures-lite = "2.6.1"
image = "0.25.8"
indexmap = "2.10.0"
rand = "0.9.2"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
