[package]
name = "vertex"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.2", features = ["jpeg", "mp3"] }
bevy_dev_tools = "0.17.2"
bevy_egui = "0.37.1"
bevy_framepace = { git = "https://github.com/TotalKrill/bevy_framepace", version = "0.20.0" }
bevy_vector_shapes = "0.11.0"
chrono = "0.4.42"
delaunator = "1.0.2"
enum-iterator = "2.3.0"
futures-lite = "2.6.1"
image = "0.25.8"
indexmap = "2.10.0"
kmeans_colors = "0.7.1"
levenshtein = "1.0.5"
palette = "0.7.6"
path-absolutize = "3.1.1"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
url = "2.5.7"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[[bin]]
name = "updater"
path = "src/updater.rs"

[[bin]]
name = "leven"
path = "src/leven.rs"
